--- a/Python/Flask_Fundamentals/Counter/templates/index.html
+++ b/Python/Flask_Fundamentals/Counter/templates/index.html
@@ -7,5 +7,11 @@
   <body>
       <h1>CM's Counter Page</h1>
       <h3>You've been visiting me {{session['count']}} times</h3>
+      <form class="logic" action="/logic" method="post">
+            <input style= "height: 50px; width: 100px;" type="submit" name="button" value="Reload for +2">
+      </form>
+      <form class="path" action="/path" method="post">
+            <input style= "height: 50px; width: 100px;" type="submit" name="button1" value="Reset">
+      </form>
   </body>
 </html>
