--- a/Python/Django/email_validation/apps/validation/templates/validation/success.html
+++ b/Python/Django/email_validation/apps/validation/templates/validation/success.html
@@ -23,11 +23,13 @@
                     <tr>
                         <th>Email</th>
                         <th>Added</th>
+                        <th>Action</th>
                     </tr>
-                    {%for i in success%}
+                    {%for i in email%}
                     <tr>
                         <td>{{i.email}}</td>
                         <td>{{i.created_at}}</td>
+                        <td><a href={{i.id}}>remove</a></td>
                     </tr>
                     {% endfor %}
               </table>
